--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   oktoast: ^3.4.0
   flutter_bloc: ^8.1.6
   flutter_screenutil: ^5.9.3
+  freezed_annotation: ^2.4.2
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
@@ -34,6 +36,8 @@ dev_dependencies:
   flutter_lints: ^3.0.0
   build_runner: ^2.4.11
   isar_generator: ^3.1.0+1
+  freezed: ^2.5.2
+  json_serializable: ^6.8.0
 
 flutter:
   uses-material-design: true
