--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+
   cupertino_icons: ^1.0.6
   go_router: ^14.2.0
   dartz: ^0.10.1
@@ -24,8 +25,8 @@ dependencies:
   path_provider: ^2.1.3
   logger: ^2.3.0
   get_it: ^7.7.0
-  oktoast: ^3.4.0
   flutter_bloc: ^8.1.6
+  oktoast: ^3.4.0
   flutter_screenutil: ^5.9.3
   freezed_annotation: ^2.4.2
   json_annotation: ^4.9.0
@@ -33,8 +34,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
   flutter_lints: ^3.0.0
   build_runner: ^2.4.11
+  icons_launcher: ^2.1.7
   isar_generator: ^3.1.0+1
   freezed: ^2.5.2
   json_serializable: ^6.8.0
