--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,3 +50,4 @@ flutter:
     - assets/images/dot_logo.png
     - assets/images/hero/sign-in.png
     - assets/images/hero/sign-up.png
+    - assets/images/bg/home-athlete.svg
