--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   dot_navigation_bar: ^1.0.2
   cached_network_image: ^3.3.1
   google_fonts: ^6.2.1
+  text_area: ^0.0.3
 
 dev_dependencies:
   flutter_test:
