--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cached_network_image: ^3.3.1
   google_fonts: ^6.2.1
   text_area: ^0.0.3
+  easy_search_bar: ^2.5.0
 
 dev_dependencies:
   flutter_test:
@@ -67,3 +68,5 @@ flutter:
     - assets/images/bg/
     - assets/images/hero/
     - assets/images/tactical-board/
+    - assets/images/exam/
+    
