--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   dot_navigation_bar: ^1.0.2
   cached_network_image: ^3.3.1
   google_fonts: ^6.2.1
+  syncfusion_flutter_calendar: ^26.1.42
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +63,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/icons/
     - assets/images/
     - assets/images/bg/
     - assets/images/hero/
