--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   cached_network_image: ^3.3.1
   google_fonts: ^6.2.1
   syncfusion_flutter_calendar: ^26.1.42
+  image_picker: ^1.1.2
+  image_cropper: ^7.1.0
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -67,3 +70,4 @@ flutter:
     - assets/images/
     - assets/images/bg/
     - assets/images/hero/
+    - assets/images/placeholder/
