--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   image_picker: ^1.1.2
   image_cropper: ^7.1.0
   dotted_border: ^2.1.0
+  buttons_tabbar: ^1.3.13
+  permission_handler: ^11.3.1
+  device_info_plus: ^10.1.0
+  file_picker: ^8.0.6
 
 dev_dependencies:
   flutter_test:
