--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,14 +44,6 @@ dependencies:
   file_picker: ^8.0.6
   text_area: ^0.0.3
   easy_search_bar: ^2.5.0
-  syncfusion_flutter_calendar: ^26.1.42
-  image_picker: ^1.1.2
-  image_cropper: ^7.1.0
-  dotted_border: ^2.1.0
-  buttons_tabbar: ^1.3.13
-  permission_handler: ^11.3.1
-  device_info_plus: ^10.1.0
-  file_picker: ^8.0.6
 
 dev_dependencies:
   flutter_test:
@@ -84,3 +76,5 @@ flutter:
     - assets/images/
     - assets/images/bg/
     - assets/images/hero/
+    - assets/images/tactical-board/
+    - assets/images/exam/
