--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -22,16 +22,19 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           channel: stable
-          flutter-version: 3.22.2
+          flutter-version: "3.22.2"
 
       - name: Install dependencies
         run: flutter pub get
-
-      # - name: Analyze project source
-      #   run: flutter analyze
-
-      # - name: Run tests
-      #   run: dart test
-
+        
       - name: Build apk release
-        run: flutter build apk
+        run: flutter build apk --release
+        
+      - name: Upload APK to GitHub release
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          APK_PATH=$(find build/app/outputs/flutter-apk/ -name "*.apk" | head -n 1)
+          TAG_NAME="release-$(date +'%Y%m%d%H%M%S')"
+          gh release create "$TAG_NAME" "$APK_PATH" --title "Release $TAG_NAME" --notes "Automated release"
