--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   dio: ^5.4.3+1
   intl: ^0.19.0
   firebase_analytics: ^11.1.0
-  firebase_core: ^3.1.1
+  firebase_core: ^3.3.0
   firebase_crashlytics: ^4.0.2
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
@@ -46,6 +46,7 @@ dependencies:
   easy_search_bar: ^2.5.0
   easy_debounce: ^2.0.3
   skeletonizer: ^1.4.1+1
+  firebase_messaging: ^15.0.4
 
 dev_dependencies:
   flutter_test:
