--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   easy_debounce: ^2.0.3
   skeletonizer: ^1.4.1+1
   firebase_messaging: ^15.0.4
+  web_socket_channel: ^3.0.1
 
 dev_dependencies:
   flutter_test:
