feat: 🎸 add mp4 support

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   skeletonizer: ^1.4.1+1
   firebase_messaging: ^15.0.4
   web_socket_channel: ^3.0.1
+  chewie: ^1.8.3
+  video_player: ^2.9.1
 
 dev_dependencies:
   flutter_test:
