--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -40,7 +40,10 @@ android {
             // Signing with the debug keys for now, so `flutter run --release` works.
             minifyEnabled = true
             shrinkResources = true
-            proguardFiles.add(file('proguard-rules.pro'))
+            proguardFiles(
+                getDefaultProguardFile("proguard-android-optimize.txt"),
+                "proguard-rules.pro"
+            )
             signingConfig = signingConfigs.debug
         }
     }
