--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -1,54 +1,41 @@
-name: Flutter
+# name: Flutter
 
-on:
-  push:
-    branches: ["main"]
-  pull_request:
-    branches: ["main"]
-  workflow_dispatch:
+# on:
+#   push:
+#     branches: ["main"]
+#   pull_request:
+#     branches: ["main"]
+#   workflow_dispatch:
 
-jobs:
-  build:
-    permissions: write-all
-    runs-on: ubuntu-latest
+# jobs:
+#   build:
+#     permissions: write-all
+#     runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v4
+#     steps:
+#       - uses: actions/checkout@v4
 
-      - uses: actions/setup-java@v4
-        with:
-          distribution: "zulu"
-          java-version: "17"
+#       - uses: actions/setup-java@v4
+#         with:
+#           distribution: "zulu"
+#           java-version: "17"
 
-      - uses: subosito/flutter-action@v2
-        with:
-          channel: stable
-          flutter-version: "3.24.1"
+#       - uses: subosito/flutter-action@v2
+#         with:
+#           channel: stable
+#           flutter-version: "3.24.1"
 
-      - name: Install dependencies
-        run: flutter pub get
+#       - name: Install dependencies
+#         run: flutter pub get
 
-      # - name: Apply Dart fixes
-      #   run: dart fix --apply
+#       - name: Build apk release
+#         run: flutter build apk --release
 
-      # - name: Commit and push changes
-      #   run: |
-      #     git config --global user.name 'github-actions[bot]'
-      #     git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-      #     git add .
-      #     git commit -m "Apply Dart fixes"
-      #     git push origin main
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build apk release
-        run: flutter build apk --release
-
-      - name: Upload APK to GitHub release
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          APK_PATH=$(find build/app/outputs/flutter-apk/ -name "*.apk" | head -n 1)
-          TAG_NAME="release-$(date +'%Y%m%d%H%M%S')"
-          gh release create "$TAG_NAME" "$APK_PATH" --title "Release $TAG_NAME" --notes "Automated release"
+#       - name: Upload APK to GitHub release
+#         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#         run: |
+#           APK_PATH=$(find build/app/outputs/flutter-apk/ -name "*.apk" | head -n 1)
+#           TAG_NAME="release-$(date +'%Y%m%d%H%M%S')"
+#           gh release create "$TAG_NAME" "$APK_PATH" --title "Release $TAG_NAME" --notes "Automated release"
