--- a/.github/workflows/shorebird_release.yaml
+++ b/.github/workflows/shorebird_release.yaml
@@ -9,6 +9,7 @@ env:
 jobs:
   release:
     if: contains(github.event.head_commit.message, 'release')
+    permissions: write-all
     defaults:
       run:
         shell: bash
