--- a/.github/workflows/shorebird_release.yaml
+++ b/.github/workflows/shorebird_release.yaml
@@ -1,6 +1,10 @@
 name: Shorebird Release
 
 on:
+  push:
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
   workflow_dispatch:
 
 env:
@@ -29,10 +33,11 @@ jobs:
           platform: android
 
       - name: 📦 Upload APK to GitHub release
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           APK_PATH=$(find build/app/outputs/flutter-apk/ -name "*.apk" | head -n 1)
           TAG_NAME="release-$(date +'%Y%m%d%H%M%S')"
+          echo "APK Path: $APK_PATH"
+          echo "Tag Name: $TAG_NAME"
           gh release create "$TAG_NAME" "$APK_PATH" --title "Release $TAG_NAME" --notes "Automated release"
