--- a/.github/workflows/dart_fix.yml
+++ b/.github/workflows/dart_fix.yml
@@ -31,12 +31,17 @@ jobs:
       - name: Apply Dart fixes
         run: dart fix --apply
 
-      - name: Commit and push changes
+      - name: Check for changes
         run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add .
-          git commit -m "Apply Dart fixes"
-          git push origin main
+          if [[ `git status --porcelain` ]]; then
+            echo "Changes detected, proceeding with commit and push."
+            git config --global user.name 'github-actions[bot]'
+            git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+            git add .
+            git commit -m "Apply Dart fixes"
+            git push origin main
+          else
+            echo "No changes detected, skipping commit and push."
+          fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
