docs: ✏️ create privacy and policies

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: dot_coaching
-description: "A new Flutter project."
+description: "A visual coaching app."
 publish_to: "none"
-version: 1.0.2+0
+version: 1.0.0+0
 
 environment:
   sdk: ^3.5.0
